--- a/css/index.css
+++ b/css/index.css
@@ -333,7 +333,7 @@ a{
     margin: 0 auto;
     top: 25px;
     font-size: 46px;
-    color: #000;
+    color: #99BD28;
     text-shadow: 1px 8px 6px #fff;
     font-weight:600;
 }
